--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -255,6 +255,7 @@
     "i18n-unused": "^0.8.0",
     "jest": "^29",
     "jest-circus": "^29.5.0",
+    "jest-html-reporters": "^3.1.4",
     "lint-staged": "^13.2.2",
     "metro-react-native-babel-preset": "0.73.9",
     "node-fetch": "<3",
