--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -89,6 +89,9 @@
       "node_modules/(?!(jest-)?(@react-native|react-native|react-native-iphone-x-helper|react-native-color-picker)/)"
     ]
   },
+  "resolutions": {
+    "promise": "^8.3.0"
+  },
   "dependencies": {
     "@amplitude/analytics-react-native": "^1.3.1",
     "@cardano-foundation/ledgerjs-hw-app-cardano": "^6.0.0",
@@ -117,6 +120,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/routers": "^6.1.5",
     "@react-navigation/stack": "^6.3.16",
+    "@sentry/react-native": "^5.8.0",
     "@shopify/flash-list": "^1.4.1",
     "@unstoppabledomains/resolution": "6.0.3",
     "@yoroi/react-swap": "^1.0.0",
