--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -139,6 +139,7 @@
     "expo": ">=48.0.0-0 <49.0.0",
     "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "^13.2.1",
+    "expo-device": "^5.4.0",
     "expo-status-bar": "~1.4.4",
     "jsc-android": "241213.1.0",
     "lodash": "^4.17.21",
@@ -173,6 +174,7 @@
     "react-native-webview": "^11.25.0",
     "react-query": "^3.39.3",
     "reselect": "^4.0.0",
+    "sentry-expo": "^7.0.1",
     "stream-browserify": "3.0.0",
     "tinycolor2": "1.4.2",
     "url": "^0.11.0",
