--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -56,6 +56,7 @@
     "publish:prod": "yarn build && npm publish --scope yoroi --access public",
     "release": "release-it",
     "test": "jest",
+    "test:watch": "jest --watch",
     "tsc": "tsc --noEmit -p tsconfig.json"
   },
   "commitlint": {
