--- a/apps/storybook-wallet-mobile/package.json
+++ b/apps/storybook-wallet-mobile/package.json
@@ -1,47 +1,19 @@
 {
-  "name": "@yoroi/wallet-mobile",
-  "version": "4.24.0",
+  "name": "storybook-wallet-mobile",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android-bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
-    "build": "yarn lint && yarn tsc && yarn test",
-    "dgraph": "depcruise src --include-only \"^src\" --output-type dot | dot -T svg > dependency-graph.svg",
-    "generate:barcodes": "node scripts/build-testing-codes.sh",
-    "i18n:missed": "i18n-unused display-missed",
-    "i18n:unused": "i18n-unused display-unused",
-    "lint": "yarn lint:typescript && yarn lint:pretty",
+    "android": "react-native run-android",
+    "build": "yarn lint && yarn tsc",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
     "lint:fix": "yarn lint:typescript --fix && yarn lint:pretty --fix",
     "lint:pretty": "prettylint \"src/**/*.tsx\" \"src/**/*.ts\" --config .prettierrc",
     "lint:typescript": "eslint --max-warnings=0 ./src -c ./.eslintrc.js",
-    "manage-translations": "node ./translations/translation-runner.js",
-    "metrics:pull": "ampli pull mobile",
-    "metrics:status": "ampli status --instanceName=track",
-    "prettify": "prettier --write ./src ./storybook ./translations --config .prettierrc",
-    "purge-translations": "rimraf ./translations/messages",
-    "prerelease:android:nightly": "bundle install && ./scripts/update-commit.sh",
-    "release:android:nightly": "bundle exec fastlane android release --env nightly",
-    "prerelease:android:production": "bundle install && ./scripts/update-commit.sh",
-    "release:android:production": "bundle exec fastlane android release --env production",
-    "prerelease:ios:nightly": "bundle install && ./scripts/update-commit.sh && npx pod-install",
-    "release:ios:nightly": "bundle exec fastlane ios release --env nightly",
-    "prerelease:ios:production": "bundle install && ./scripts/update-commit.sh && npx pod-install",
-    "release:ios:production": "bundle exec fastlane ios release --env production",
-    "reset": "yarn reset:android && yarn reset:ios",
-    "reset:android": "cd android && ./gradlew clean && cd ..",
-    "reset:ios": "yarn pod-install",
-    "run:android:dev:debug": "ENVFILE=.env react-native run-android --mode=devDebug --appIdSuffix=dev --verbose",
-    "run:android:nightly:debug": "ENVFILE=.env.nightly react-native run-android --mode=nightlyDebug --appIdSuffix=nightly --verbose",
-    "run:android:nightly:release": "ENVFILE=.env.nightly react-native run-android --mode=nightlyRelease --appIdSuffix=nightly --verbose",
-    "run:ios:dev:debug": "ENVFILE=.env react-native run-ios --mode=Debug --scheme=yoroi --verbose",
-    "run:ios:nightly:debug": "ENVFILE=.env.nightly react-native run-ios --mode=Debug --scheme=nightly --verbose",
-    "run:ios:nightly:release": "ENVFILE=.env.nightly react-native run-ios --mode=Release --scheme=nightly --verbose",
-    "stag-ios": "react-native run-ios --scheme=emurgo-staging --configuration=Debug",
     "prestart": "sb-rn-get-stories",
-    "start": "yarn react-native start --reset-cache --verbose",
-    "storybook:watch": "sb-rn-watcher",
-    "test": "jest src --ci --bail --silent",
-    "tsc": "tsc --noEmit -p tsconfig.json",
-    "tsc:cover": "yarn typescript-coverage-report -i '**/*.test.*' -i '**/*.stories*' -t html --threshold=100"
+    "start": "react-native start",
+    "test": "jest",
+    "tsc": "tsc --noEmit -p tsconfig.json"
   },
   "lint-staged": {
     "./src/**/*.{ts,tsx}": [
@@ -56,38 +28,7 @@
     ]
   },
   "jest": {
-    "cacheDirectory": ".jest/cache",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.stories.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "coverageReporters": [
-      "text-summary",
-      "html"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.json",
-        "babelConfig": true
-      }
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "preset": "react-native",
-    "setupFiles": [
-      "<rootDir>/jestSetup.ts"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?(@react-native|react-native|react-native-iphone-x-helper|react-native-color-picker)/)"
-    ]
+    "preset": "react-native"
   },
   "dependencies": {
     "@amplitude/analytics-react-native": "^1.3.1",
@@ -207,6 +148,19 @@
     "@formatjs/cli": "^6.1.0",
     "@formatjs/ts-transformer": "^3.13.0",
     "@react-navigation/devtools": "^6.0.13",
+    "@storybook/addon-actions": "<7.0.0",
+    "@storybook/addon-controls": "<7.0.0",
+    "@storybook/addon-knobs": "<7.0.0",
+    "@storybook/addon-ondevice-actions": "^6.5.4-alpha.0",
+    "@storybook/addon-ondevice-backgrounds": "^6.5.4-alpha.0",
+    "@storybook/addon-ondevice-controls": "^6.5.4-alpha.0",
+    "@storybook/addon-ondevice-knobs": "^6.5.4-alpha.0",
+    "@storybook/addon-ondevice-notes": "^6.5.4-alpha.0",
+    "@storybook/addons": "<7.0.0",
+    "@storybook/api": "<7.0.0",
+    "@storybook/core-events": "<7.0.0",
+    "@storybook/react-native": "^6.5.4-alpha.0",
+    "@storybook/theming": "<7.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^9.0.0",
     "@tsconfig/react-native": "^2.0.2",
@@ -263,15 +217,5 @@
     "typescript": "4.8.4",
     "typescript-coverage-report": "^0.6.4",
     "yargs": "^17.7.2"
-  },
-  "engineStrict": true,
-  "engine": {
-    "node": "~16.19.0",
-    "npm": "~7.19.1"
-  },
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs"
-    }
   }
 }
