--- a/apps/wallet-mobile/android/build.gradle
+++ b/apps/wallet-mobile/android/build.gradle
@@ -22,7 +22,7 @@ buildscript {
       
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.3.1"
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "com.facebook.react:react-native-gradle-plugin"
         classpath "org.mozilla.rust-android-gradle:plugin:0.9.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
