--- a/packages/resolver/package.json
+++ b/packages/resolver/package.json
@@ -137,7 +137,8 @@
     ]
   },
   "dependencies": {
-    "@yoroi/common": "1.4.0",
+    "@yoroi/api": "1.5.0",
+    "@yoroi/common": "1.5.0",
     "axios": "^1.5.0",
     "zod": "^3.22.2"
   },
@@ -149,7 +150,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^28.1.2",
-    "@yoroi/types": "1.4.0",
+    "@yoroi/types": "1.5.0",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
     "dependency-cruiser": "^13.1.1",
