--- a/apps/wallet-mobile/package.json
+++ b/apps/wallet-mobile/package.json
@@ -127,6 +127,7 @@
     "@yoroi/resolver": "1.5.0",
     "@yoroi/staking": "1.5.0",
     "@yoroi/swap": "1.5.0",
+    "@yoroi/theme": "^1.0.0",
     "add": "2.0.6",
     "assert": "^2.0.0",
     "base-64": "^1.0.0",
