--- a/packages/resolver/package.json
+++ b/packages/resolver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yoroi/resolver",
-  "version": "1.5.0",
+  "version": "1.5.1-beta.1",
   "description": "Yoroi domain resolver",
   "keywords": [
     "yoroi",
